nullaway_error_B862E4DA-62BA-4E56-B061-9CF978584706.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-context/src/main/java/org/springframework/validation/DataBinder.java:687: error: [NullAway] enhanced-for expression validators is @Nullable
		for (Validator validator : validators) {
		                           ^
    (see http://t.uber.com/nullaway )
